# ASCIILib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Main.hx  Makefile  README.md  SDLSupport.h  Sdl.hx  build.hxml  build.sh  generate-xcode-project.sh
ASCIILib/: ASCIILib.vcxproj  ASCIILib.vcxproj.filters  Alignment.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  ContentManager.cpp  ContentManager.h  DialogFrame.cpp  DialogFrame.h  DialogScene.cpp  DialogScene.h  DialogStyle.cpp  DialogStyle.h  FilePaths.cpp  FilePaths.h  FileReader.cpp  FileReader.h  Game.cpp  Game.h  GlobalArgs.cpp  GlobalArgs.h  Graphics.cpp  Graphics.h  ImageCache.cpp  ImageCache.h  Input.cpp  Input.h  InputAction.cpp  InputAction.h  InputMappings.cpp  InputMappings.h  Label.cpp  Label.h  LanguageManager.cpp  LanguageManager.h  (+35 more)
ASCIILib.xcodeproj/: project.pbxproj
ASCIILib/Debug/: ASCIILib.lib
ASCIILib/input/: InputAction.cpp  InputAction.h  InputMappings.cpp  InputMappings.h
ASCIILib/ui/: Alignment.h  Button.cpp  Button.h  Label.h  Menu.cpp  Menu.h  parsing.h
SurfaceEditor/: .gitignore  SurfaceEditor.sln
SurfaceEditor/SurfaceEditor/: CellInfo.Designer.cs  CellInfo.cs  EditorForm.Designer.cs  EditorForm.cs  Program.cs  ResizeControl.cs  SurfaceEditor.csproj  SurfacePanel.Designer.cs  SurfacePanel.cs  Toolbox.Designer.cs  Toolbox.cs
SurfaceEditor/SurfaceEditor/Controls/: BrushControl.Designer.cs  BrushControl.cs  CellInfo.Designer.cs  CellInfo.cs  ColorPickerControl.Designer.cs  ColorPickerControl.cs  ResizeControl.Designer.cs  ShapesControl.Designer.cs  ShapesControl.cs  ShiftControl.Designer.cs  ShiftControl.cs  SpecialInfoControl.Designer.cs  SpecialInfoControl.cs  SurfacePanel.Designer.cs  SurfacePanel.cs  Toolbox.Designer.cs  Toolbox.cs
SurfaceEditor/SurfaceEditor/Forms/: LongTextForm.Designer.cs  LongTextForm.cs  NewSurfaceForm.Designer.cs  NewSurfaceForm.cs  ShortTextForm.Designer.cs  ShortTextForm.cs
SurfaceEditor/SurfaceEditor/Lib/: CellChange.cs  Surface.cs
SurfaceEditor/SurfaceEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cmake/: FindICU.cmake  FindLibOGG.cmake  FindLibVorbis.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake
lib/: icudt.exp  icudt.lib  icuin.exp  icuin.lib  icuio.exp  icuio.lib  icule.exp  icule.lib  iculx.exp  iculx.lib  icutest.exp  icutest.lib  icutu.exp  icutu.lib  icuuc.exp  icuuc.lib
localization/: translate.py
